@@ -1,49 +1,62 @@
 package it.pagopa.pn.cucumber.steps.recipient;
 
+import io.cucumber.java.Before;
+import io.cucumber.java.Transpose;
 import io.cucumber.java.en.And;
 import io.cucumber.java.en.Given;
 import io.cucumber.java.en.Then;
-import it.pagopa.pn.client.b2b.pa.PnPaB2bUtils;
-import it.pagopa.pn.client.b2b.pa.generated.openapi.clients.externalb2bpa.model.TimelineElementCategoryV23;
-import it.pagopa.pn.client.b2b.pa.generated.openapi.clients.externalb2bpa.model.TimelineElementV23;
+import it.pagopa.pn.client.b2b.generated.openapi.clients.delivery2b.model.NotificationAttachmentDownloadMetadataResponse;
+import it.pagopa.pn.client.b2b.generated.openapi.clients.delivery2b.model.NotificationSearchResponse;
+import it.pagopa.pn.client.b2b.generated.openapi.clients.delivery2b.model.TimelineElementV28;
+import it.pagopa.pn.client.b2b.generated.openapi.clients.external.generate.model.external.bff.recipient.NotificationStatusV26;
+import it.pagopa.pn.client.b2b.pa.generated.openapi.clients.externalb2bpa.model.FullSentNotificationV28;
+import it.pagopa.pn.client.b2b.pa.generated.openapi.clients.externalb2bpa.model.TimelineElementCategoryV28;
 import it.pagopa.pn.client.b2b.pa.service.IPnWebMandateClient;
 import it.pagopa.pn.client.b2b.pa.service.IPnWebRecipientClient;
+import it.pagopa.pn.client.b2b.pa.service.impl.B2BRecipientExternalClientImpl;
+import it.pagopa.pn.client.b2b.pa.service.impl.B2bMandateServiceClientImpl;
+import it.pagopa.pn.client.b2b.pa.service.impl.PnWebMandateExternalClientImpl;
+import it.pagopa.pn.client.b2b.pa.service.impl.PnWebRecipientExternalClientImpl;
 import it.pagopa.pn.client.b2b.pa.service.utils.SettableBearerToken;
+import it.pagopa.pn.client.b2b.pa.wrapper.BundleFullReceivedNotification;
 import it.pagopa.pn.client.web.generated.openapi.clients.externalMandate.model.*;
-import it.pagopa.pn.client.web.generated.openapi.clients.externalWebRecipient.model.FullReceivedNotificationV23;
-import it.pagopa.pn.client.web.generated.openapi.clients.externalWebRecipient.model.NotificationAttachmentDownloadMetadataResponse;
 import it.pagopa.pn.cucumber.steps.SharedSteps;
+import lombok.Getter;
+import lombok.Setter;
 import lombok.extern.slf4j.Slf4j;
 import org.apache.commons.lang.time.DateUtils;
 import org.junit.jupiter.api.Assertions;
 import org.opentest4j.AssertionFailedError;
 import org.springframework.beans.factory.annotation.Autowired;
 import org.springframework.beans.factory.annotation.Value;
+import org.springframework.context.ApplicationContext;
 import org.springframework.web.client.HttpClientErrorException;
 import org.springframework.web.client.HttpStatusCodeException;
-import java.io.ByteArrayInputStream;
+
 import java.text.SimpleDateFormat;
 import java.util.*;
 import java.util.concurrent.TimeUnit;
-import java.util.concurrent.atomic.AtomicReference;
 
+import static it.pagopa.pn.cucumber.steps.utilitySteps.Costanti.*;
+import static org.assertj.core.api.Assertions.assertThat;
 import static org.awaitility.Awaitility.await;
 
 
 @Slf4j
 public class RicezioneNotificheWebDelegheSteps {
-    private final IPnWebMandateClient webMandateClient;
-    private final IPnWebRecipientClient webRecipientClient;
+    private final ApplicationContext context;
+    @Getter
+    private IPnWebMandateClient webMandateClient;
+    private IPnWebRecipientClient webRecipientClient;
     private final SharedSteps sharedSteps;
-    private final PnPaB2bUtils b2bUtils;
+    @Getter
+    @Setter
     private MandateDto mandateToSearch;
     private final SettableBearerToken.BearerTokenType baseUser = SettableBearerToken.BearerTokenType.USER_2;
     private final String verificationCode = "24411";
     private HttpStatusCodeException notificationError;
-    private final String marioCucumberTaxID;
-    private final String marioGherkinTaxID;
-    private final String gherkinSrltaxId;
-    private final String cucumberSpataxId;
+
+    private UserDto userDtoCustom;
     @Value("${pn.external.senderId}")
     private String senderId;
     @Value("${pn.external.senderId-2}")
@@ -55,90 +68,103 @@ public class RicezioneNotificheWebDelegheSteps {
     @Value("${pn.external.senderId-ROOT}")
     private String senderIdROOT;
 
+    private boolean isUseB2BFlag;
+
+    @Before("@useB2B")
+    public void beforeMethod() {
+        this.webMandateClient = context.getBean(B2bMandateServiceClientImpl.class);
+        if (!(webRecipientClient instanceof B2BRecipientExternalClientImpl)) {
+            this.webRecipientClient = context.getBean(B2BRecipientExternalClientImpl.class);
+            sharedSteps.setWebRecipientClient(webRecipientClient);
+        }
+        isUseB2BFlag = true;
+    }
 
     @Autowired
-    public RicezioneNotificheWebDelegheSteps(IPnWebMandateClient webMandateClient, SharedSteps sharedSteps) {
+    public RicezioneNotificheWebDelegheSteps(ApplicationContext context, PnWebMandateExternalClientImpl webMandateClient, SharedSteps sharedSteps) {
+        this.context = context;
         this.webMandateClient = webMandateClient;
         this.sharedSteps = sharedSteps;
         this.webRecipientClient = sharedSteps.getWebRecipientClient();
-        this.b2bUtils = sharedSteps.getB2bUtils();
-        this.marioCucumberTaxID = sharedSteps.getMarioCucumberTaxID();
-        this.marioGherkinTaxID = sharedSteps.getMarioGherkinTaxID();
-        this.gherkinSrltaxId = sharedSteps.getGherkinSrltaxId();
-        this.cucumberSpataxId = sharedSteps.getCucumberSpataxId();
     }
 
     private String getTaxIdByUser(String user) {
-
         return switch (user) {
-            case "Mario Cucumber" -> marioCucumberTaxID;
-            case "Mario Gherkin" -> marioGherkinTaxID;
-            case "GherkinSrl" -> gherkinSrltaxId;
-            case "CucumberSpa" -> cucumberSpataxId;
+            case MARIO_CUCUMBER -> MARIO_CUCUMBER_TAX_ID;
+            case MARIO_GHERKIN -> MARIO_GHERKIN_TAX_ID;
+            case GHERKIN_SRL -> GHERKIN_SRL_TAX_ID;
+            case CUCUMBER_SPA -> CUCUMBER_SPA_TAX_ID;
+            case "Utente errato" -> "asdasdasd";
             default -> throw new IllegalArgumentException();
         };
     }
 
-    private UserDto getUserDtoByuser(String user) {
-
+    private UserDto getUserDtoByUser(String user) {
         return switch (user.trim().toLowerCase()) {
-            case "mario cucumber" -> new UserDto()
-                    .displayName("Mario Cucumber")
-                    .firstName("Mario")
-                    .lastName("Cucumber")
-                    .fiscalCode(marioCucumberTaxID)
-                    .person(true);
-            case "mario gherkin" -> new UserDto()
-                    .displayName("Mario Gherkin")
-                    .firstName("Mario")
-                    .lastName("Gherkin")
-                    .fiscalCode(marioGherkinTaxID)
-                    .person(true);
-            case "gherkinsrl" -> new UserDto()
-                    .displayName("gherkinsrl")
-                    .firstName("gherkin")
-                    .lastName("srl")
-                    .fiscalCode(gherkinSrltaxId)
-                    .companyName("gherkinsrl")
-                    .person(false);
-            case "cucumberspa" -> new UserDto()
-                    .displayName("cucumberspa")
-                    .firstName("cucumber")
-                    .lastName("spa")
-                    .fiscalCode(cucumberSpataxId)
-                    .companyName("cucumberspa")
-                    .person(false);
+            case "mario cucumber" ->
+                    createUserDto(MARIO_CUCUMBER, "Mario", "Cucumber", MARIO_CUCUMBER_TAX_ID, null, true);
+            case "mario gherkin" -> createUserDto(MARIO_GHERKIN, "Mario", "Gherkin", MARIO_GHERKIN_TAX_ID, null, true);
+            case "gherkinsrl" -> createUserDto(GHERKIN_SRL, "gherkin", "srl", GHERKIN_SRL_TAX_ID, GHERKIN_SRL, false);
+            case "cucumberspa" ->
+                    createUserDto(CUCUMBER_SPA, "cucumber", "spa", CUCUMBER_SPA_TAX_ID, CUCUMBER_SPA, false);
             default -> throw new IllegalArgumentException();
         };
     }
 
-    private boolean setBearerToken(String user) {
-        boolean beenSet = switch (user.trim().toLowerCase()) {
-            case "mario cucumber" -> webMandateClient.setBearerToken(SettableBearerToken.BearerTokenType.USER_1);
-            case "mario gherkin" -> webMandateClient.setBearerToken(SettableBearerToken.BearerTokenType.USER_2);
-            case "gherkinsrl" -> webMandateClient.setBearerToken(SettableBearerToken.BearerTokenType.PG_1);
-            case "cucumberspa" -> webMandateClient.setBearerToken(SettableBearerToken.BearerTokenType.PG_2);
-            default -> false;
+    public boolean setBearerToken(String user) {
+        return switch (user.trim()) {
+            case MARIO_CUCUMBER -> {
+                setRequiredAPI(false);
+                yield webMandateClient.setBearerToken(SettableBearerToken.BearerTokenType.USER_1);
+            }
+            case MARIO_GHERKIN -> {
+                setRequiredAPI(false);
+                yield webMandateClient.setBearerToken(SettableBearerToken.BearerTokenType.USER_2);
+            }
+            case GHERKIN_SRL -> {
+                setRequiredAPI(isUseB2BFlag);
+                yield webMandateClient.setBearerToken(SettableBearerToken.BearerTokenType.PG_1);
+            }
+            case CUCUMBER_SPA -> {
+                setRequiredAPI(isUseB2BFlag);
+                yield webMandateClient.setBearerToken(SettableBearerToken.BearerTokenType.PG_2);
+            }
+            default -> throw new IllegalArgumentException();
         };
+    }
 
-        return !beenSet;
+    private void setRequiredAPI(boolean isB2BRequired) {
+        IPnWebMandateClient mandateClient;
+        IPnWebRecipientClient recipientClient;
+        if (isB2BRequired) {
+            mandateClient = context.getBean(B2bMandateServiceClientImpl.class);
+            recipientClient = context.getBean(B2BRecipientExternalClientImpl.class);
+        } else {
+            mandateClient = context.getBean(PnWebMandateExternalClientImpl.class);
+            recipientClient = context.getBean(PnWebRecipientExternalClientImpl.class);
+        }
+        this.webMandateClient = mandateClient;
+        this.webRecipientClient = recipientClient;
+        sharedSteps.setWebRecipientClient(webRecipientClient);
+    }
+
+    @Then("si verifica che lo status code sia: {int}")
+    public void checkStatusCode(int statusCode) {
+        Assertions.assertEquals(statusCode, this.notificationError.getStatusCode().value());
     }
 
     @And("{string} viene delegato da {string}")
     public void delegateUser(String delegate, String delegator) {
-        if (setBearerToken(delegator)) {
-            throw new IllegalArgumentException();
-        }
+        setBearerToken(delegator);
         SimpleDateFormat sdf = new SimpleDateFormat("yyyy-MM-dd");
-        MandateDto mandate = (new MandateDto()
-                .delegator(getUserDtoByuser(delegator))
-                .delegate(getUserDtoByuser(delegate))
+        MandateDto mandate = new MandateDto()
+                .delegator(getUserDtoByUser(delegator))
+                .delegate(getUserDtoByUser(delegate))
                 .verificationCode(verificationCode)
                 .datefrom(sdf.format(new Date()))
                 .visibilityIds(new LinkedList<>())
                 .status(MandateDto.StatusEnum.PENDING)
-                .dateto(sdf.format(DateUtils.addDays(new Date(), 1)))
-        );
+                .dateto(sdf.format(DateUtils.addDays(new Date(), 1)));
 
         System.out.println("MANDATE: " + mandate);
         try {
@@ -148,28 +174,25 @@ public class RicezioneNotificheWebDelegheSteps {
         }
     }
 
-
     @And("{string} viene delegato da {string} per comune {string}")
     public void delegateUser(String delegate, String delegator, String comune) {
-        if (setBearerToken(delegator)) {
-            throw new IllegalArgumentException();
-        }
+        setBearerToken(delegator);
         OrganizationIdDto organizationIdDto = new OrganizationIdDto();
 
-         switch (comune) {
-            case "Comune_1" -> organizationIdDto
+        switch (comune) {
+            case COMUNE_1 -> organizationIdDto
                     .name("Comune di Milano")
                     .uniqueIdentifier(senderId);
-            case "Comune_2" -> organizationIdDto
+            case COMUNE_2 -> organizationIdDto
                     .name("Comune di Verona")
                     .uniqueIdentifier(senderId2);
-            case "Comune_Multi" -> organizationIdDto
+            case COMUNE_MULTI -> organizationIdDto
                     .name("Comune di Palermo")
                     .uniqueIdentifier(senderIdGA);
-            case "Comune_Son" -> organizationIdDto
+            case COMUNE_SON -> organizationIdDto
                     .name("Ufficio per la transizione al Digitale")
                     .uniqueIdentifier(senderIdSON);
-            case "Comune_Root" -> organizationIdDto
+            case COMUNE_ROOT -> organizationIdDto
                     .name("Comune di Aglientu")
                     .uniqueIdentifier(senderIdROOT);
             default -> throw new IllegalStateException();
@@ -178,11 +201,11 @@ public class RicezioneNotificheWebDelegheSteps {
 
         SimpleDateFormat sdf = new SimpleDateFormat("yyyy-MM-dd");
         MandateDto mandate = (new MandateDto()
-                .delegator(getUserDtoByuser(delegator))
-                .delegate(getUserDtoByuser(delegate))
+                .delegator(getUserDtoByUser(delegator))
+                .delegate(getUserDtoByUser(delegate))
                 .verificationCode(verificationCode)
                 .datefrom(sdf.format(new Date()))
-                .visibilityIds(Arrays.asList(organizationIdDto))
+                .visibilityIds(List.of(organizationIdDto))
                 .status(MandateDto.StatusEnum.PENDING)
                 .dateto(sdf.format(DateUtils.addDays(new Date(), 1)))
         );
@@ -197,15 +220,12 @@ public class RicezioneNotificheWebDelegheSteps {
     }
 
     @Given("{string} rifiuta se presente la delega ricevuta {string}")
-    public void userRejectIfPresentMandateOfAnotheruser(String delegate, String delegator) {
-        if (setBearerToken(delegate)) {
-            throw new IllegalArgumentException();
-        }
+    public void userRejectIfPresentMandateOfAnotherUser(String delegate, String delegator) {
+        setBearerToken(delegate);
         String delegatorTaxId = getTaxIdByUser(delegator);
 
         List<MandateDto> mandateList = webMandateClient.searchMandatesByDelegate(delegatorTaxId, null);
 
-        //List<MandateDto> mandateList = webMandateClient.listMandatesByDelegate1(null);
         MandateDto mandateDto = null;
         for (MandateDto mandate : mandateList) {
             log.debug("MANDATE-LIST: {}", mandateList);
@@ -223,13 +243,10 @@ public class RicezioneNotificheWebDelegheSteps {
 
     @And("{string} accetta la delega {string}")
     public void userAcceptsMandateOfAnotherUser(String delegate, String delegator) {
-        if (setBearerToken(delegate)) {
-            throw new IllegalArgumentException();
-        }
+        setBearerToken(delegate);
         String delegatorTaxId = getTaxIdByUser(delegator);
 
         List<MandateDto> mandateList = webMandateClient.searchMandatesByDelegate(delegatorTaxId, null);
-        // List<MandateDto> mandateList = webMandateClient.listMandatesByDelegate1(null);
         System.out.println("MANDATE-LIST: " + mandateList);
         MandateDto mandateDto = mandateList.stream().filter(mandate -> Objects.requireNonNull(mandate.getDelegator()).getFiscalCode() != null && mandate.getDelegator().getFiscalCode().equalsIgnoreCase(delegatorTaxId)).findFirst().orElse(null);
 
@@ -239,12 +256,59 @@ public class RicezioneNotificheWebDelegheSteps {
 
     }
 
-    @And("la notifica può essere correttamente letta da {string} con delega")
-    public void notificationCanBeCorrectlyReadFromWithMandate(String recipient) {
+    @And("{string} accetta la delega {string} associando un gruppo")
+    public void userAcceptsMandateWithGroups(String delegate, String delegator) {
+        setBearerToken(delegate);
+        String delegatorTaxId = getTaxIdByUser(delegator);
+
+        List<MandateDto> mandateList = webMandateClient.searchMandatesByDelegate(delegatorTaxId, null);
+        System.out.println("MANDATE-LIST: " + mandateList);
+        MandateDto mandateDto = mandateList.stream().filter(mandate -> Objects.requireNonNull(mandate.getDelegator()).getFiscalCode() != null && mandate.getDelegator().getFiscalCode().equalsIgnoreCase(delegatorTaxId)).findFirst().orElse(null);
+
+        Assertions.assertNotNull(mandateDto);
+        this.mandateToSearch = mandateDto;
+
+        List<HashMap<String, String>> resp = sharedSteps.getPnExternalServiceClient().pgGroupInfo(webRecipientClient.getBearerTokenSetted());
+        String gruppoAttivo = null;
+        if (resp != null && !resp.isEmpty()) {
+            for (HashMap<String, String> entry : resp) {
+                if ("ACTIVE".equals(entry.get("status"))) {
+                    gruppoAttivo = entry.get("id");
+                    break;
+                }
+            }
+        }
+
+        AcceptRequestDto acceptRequestDto = new AcceptRequestDto().verificationCode(verificationCode).groups(List.of(gruppoAttivo));
+        Assertions.assertDoesNotThrow(() -> webMandateClient.acceptMandate(mandateDto.getMandateId(), acceptRequestDto));
+
+    }
+
+    @And("la notifica {canBe} essere correttamente letta da {string} con delega")
+    public void notificationCanBeCorrectlyReadFromWithMandate(boolean canBeRetrieved, String recipient) {
         sharedSteps.selectUser(recipient);
-        Assertions.assertDoesNotThrow(() -> {
-            webRecipientClient.getReceivedNotification(sharedSteps.getSentNotification().getIun(), mandateToSearch.getMandateId());
-        });
+        BundleFullReceivedNotification receivedNotification = null;
+        try {
+            receivedNotification = webRecipientClient.getFullReceivedNotification(sharedSteps.getNotificationIun(), mandateToSearch.getMandateId());
+        } catch (HttpClientErrorException e) {
+            notificationError = e;
+        }
+        if (canBeRetrieved) {
+            assertThat(receivedNotification).as("La notifica recuperata non dev'essere null").isNotNull();
+        } else {
+            assertThat(receivedNotification).as("La notifica recuperata dev'essere null").isNull();
+            assertThat(notificationError).as("L'errore prodotto non dev'essere null").isNotNull();
+        }
+    }
+
+    @Then("come delegante {string} l'associazione a gruppi sulla delega di {string}")
+    public void removeGroups(String delegator, String delegate) {
+        sharedSteps.selectUser(delegator);
+
+        UpdateRequestDto updateRequestDto = new UpdateRequestDto();
+        updateRequestDto.setGroups(new LinkedList<>());
+
+        Assertions.assertDoesNotThrow(() -> webMandateClient.updateMandate(mandateToSearch.getMandateId(), updateRequestDto));
     }
 
     @Then("come amministratore {string} associa alla delega il primo gruppo disponibile attivo per il delegato {string}")
@@ -306,17 +370,14 @@ public class RicezioneNotificheWebDelegheSteps {
     public void theDocumentCanBeProperlyRetrievedByWithMandate(String recipient) {
         sharedSteps.selectUser(recipient);
         NotificationAttachmentDownloadMetadataResponse downloadResponse = getReceivedNotificationDocument();
-        verifySha256(downloadResponse);
+        verifyRetrievedDocument(downloadResponse);
     }
 
     @Then("il documento notificato non può essere correttamente recuperato da {string} con delega restituendo un errore {string}")
     public void theDocumentCanNotBeProperlyRetrievedByWithMandate(String recipient, String statusCode) {
         sharedSteps.selectUser(recipient);
-
         try {
-            Assertions.assertDoesNotThrow(() -> {
-                getReceivedNotificationDocument();
-            });
+            Assertions.assertDoesNotThrow(this::getReceivedNotificationDocument);
         } catch (AssertionFailedError assertionFailedError) {
             System.out.println(assertionFailedError.getCause().toString());
             System.out.println(assertionFailedError.getCause().getMessage());
@@ -326,54 +387,61 @@ public class RicezioneNotificheWebDelegheSteps {
     }
 
     private NotificationAttachmentDownloadMetadataResponse getReceivedNotificationDocument() {
+        FullSentNotificationV28 fullSentNotification = sharedSteps.getSentNotificationLastVersion();
         return webRecipientClient.getReceivedNotificationDocument(
-                sharedSteps.getSentNotification().getIun(),
-                Integer.parseInt(Objects.requireNonNull(sharedSteps.getSentNotification().getDocuments().get(0).getDocIdx())),
+                fullSentNotification.getIun(),
+                Integer.parseInt(Objects.requireNonNull(fullSentNotification.getDocuments().get(0).getDocIdx())),
                 UUID.fromString(Objects.requireNonNull(mandateToSearch.getMandateId()))
         );
     }
 
-    @Then("l'allegato {string} può essere correttamente recuperato da {string} con delega")
-    public void attachmentCanBeCorrectlyRetrievedFromWithMandate(String attachmentName, String recipient) {
+    @Then("l'allegato {string} {canBe} essere correttamente recuperato da {string} con delega")
+    public void attachmentCanBeCorrectlyRetrievedFromWithMandate(String attachmentName, boolean canBeRetrieved, String recipient) {
         //TODO Modificare attachmentIdx al momento e 0...............
         sharedSteps.selectUser(recipient);
-        NotificationAttachmentDownloadMetadataResponse downloadResponse = webRecipientClient.getReceivedNotificationAttachment(
-                sharedSteps.getSentNotification().getIun(),
-                attachmentName,
-                UUID.fromString(Objects.requireNonNull(mandateToSearch.getMandateId())), 0);
+        NotificationAttachmentDownloadMetadataResponse downloadResponse = null;
+        try {
+            downloadResponse = webRecipientClient.getReceivedNotificationAttachment(
+                    sharedSteps.getNotificationIun(),
+                    attachmentName,
+                    UUID.fromString(Objects.requireNonNull(mandateToSearch.getMandateId())), 0);
 
-        if (downloadResponse != null && downloadResponse.getRetryAfter() != null && downloadResponse.getRetryAfter() > 0) {
-            try {
-                await().atMost(downloadResponse.getRetryAfter() * 3L, TimeUnit.MILLISECONDS);
-                downloadResponse = webRecipientClient.getReceivedNotificationAttachment(
-                        sharedSteps.getSentNotification().getIun(),
-                        attachmentName,
-                        UUID.fromString(mandateToSearch.getMandateId()), 0);
-            } catch (RuntimeException exc) {
-                log.error("Await error exception: {}", exc.getMessage());
-                throw exc;
+            if (downloadResponse != null && downloadResponse.getRetryAfter() != null && downloadResponse.getRetryAfter() > 0) {
+                try {
+                    await().atMost(downloadResponse.getRetryAfter() * 3L, TimeUnit.MILLISECONDS);
+                    downloadResponse = webRecipientClient.getReceivedNotificationAttachment(
+                            sharedSteps.getNotificationIun(),
+                            attachmentName,
+                            UUID.fromString(mandateToSearch.getMandateId()), 0);
+                    verifyRetrievedDocument(downloadResponse);
+                } catch (RuntimeException exc) {
+                    log.error("Await error exception: {}", exc.getMessage());
+                    throw exc;
+                }
             }
+//        if (!"F24".equalsIgnoreCase(attachmentName)) {
+//            verifySha256(downloadResponse);
+//        }
+        } catch (HttpClientErrorException e) {
+            notificationError = e;
         }
-        if (!"F24".equalsIgnoreCase(attachmentName)) {
-            verifySha256(downloadResponse);
+        if (canBeRetrieved) {
+            assertThat(downloadResponse).as("L'allegato recuperato non dev'essere null").isNotNull();
+        } else {
+            assertThat(downloadResponse).as("L'allegato recuperato dev'essere null").isNull();
+            assertThat(notificationError).as("L'errore prodotto non dev'essere null").isNotNull();
         }
     }
 
-    private void verifySha256(NotificationAttachmentDownloadMetadataResponse downloadResponse) {
-        AtomicReference<String> Sha256 = new AtomicReference<>("");
-        Assertions.assertDoesNotThrow(() -> {
-            byte[] bytes = Assertions.assertDoesNotThrow(() ->
-                    b2bUtils.downloadFile(Objects.requireNonNull(downloadResponse).getUrl()));
-            Sha256.set(b2bUtils.computeSha256(new ByteArrayInputStream(bytes)));
-        });
-        Assertions.assertEquals(Sha256.get(), Objects.requireNonNull(downloadResponse).getSha256());
+    private void verifyRetrievedDocument(NotificationAttachmentDownloadMetadataResponse downloadResponse) {
+        Assertions.assertNotNull(downloadResponse.getFilename());
+        Assertions.assertNotNull(downloadResponse.getContentLength());
+        Assertions.assertNotNull(downloadResponse.getUrl());
     }
 
     @And("{string} revoca la delega a {string}")
     public void userRevokesMandate(String delegator, String delegate) {
-        if (setBearerToken(delegator)) {
-            throw new IllegalArgumentException();
-        }
+        setBearerToken(delegator);
 
         List<MandateDto> mandateList = webMandateClient.listMandatesByDelegator1();
         System.out.println("MANDATE LIST: " + mandateList);
@@ -393,9 +461,7 @@ public class RicezioneNotificheWebDelegheSteps {
 
     @And("{string} rifiuta la delega ricevuta da {string}")
     public void delegateRefusesMandateReceivedFromDelegator(String delegate, String delegator) {
-        if (setBearerToken(delegate)) {
-            throw new IllegalArgumentException();
-        }
+        setBearerToken(delegate);
         String delegatorTaxId = getTaxIdByUser(delegator);
 
         List<MandateDto> mandateList = webMandateClient.searchMandatesByDelegate(delegatorTaxId, null);
@@ -417,7 +483,7 @@ public class RicezioneNotificheWebDelegheSteps {
         sharedSteps.selectUser(recipient);
         HttpClientErrorException httpClientErrorException = null;
         try {
-            webRecipientClient.getReceivedNotification(sharedSteps.getSentNotification().getIun(), mandateToSearch.getMandateId());
+            webRecipientClient.getFullReceivedNotification(sharedSteps.getNotificationIun(), mandateToSearch.getMandateId());
         } catch (HttpClientErrorException e) {
             httpClientErrorException = e;
         }
@@ -436,74 +502,130 @@ public class RicezioneNotificheWebDelegheSteps {
     public void notificationCanBeCorrectlyReadFrom(String recipient) {
         sharedSteps.selectUser(recipient);
         Assertions.assertDoesNotThrow(() -> {
-            webRecipientClient.getReceivedNotification(sharedSteps.getSentNotification().getIun(), null);
+            webRecipientClient.getFullReceivedNotification(sharedSteps.getNotificationIun(), null);
         });
         webRecipientClient.setBearerToken(baseUser);
     }
 
-    @And("lato destinatario la notifica può essere correttamente recuperata da {string} e verifica presenza dell'evento di timeline NOTIFICATION_RADD_RETRIEVED")
-    public void notificationCanBeCorrectlyReadFromBytimeline(String recipient) {
+    @And("lato destinatario la notifica può essere correttamente recuperata da {string} e verifica presenza dell'evento di timeline {string}")
+    public void notificationCanBeCorrectlyReadFromTimeline(String recipient, String timelineEventString) {
         sharedSteps.selectUser(recipient);
-
         try {
-            it.pagopa.pn.client.web.generated.openapi.clients.externalWebRecipient.model.TimelineElementCategoryV23 timelineElementCategoryV23 =
-                    it.pagopa.pn.client.web.generated.openapi.clients.externalWebRecipient.model.TimelineElementCategoryV23.NOTIFICATION_RADD_RETRIEVED;
-            it.pagopa.pn.client.web.generated.openapi.clients.externalWebRecipient.model.TimelineElementV23 timelineElement = getTimelineElementV23WebRecipient(timelineElementCategoryV23);
-
-            Assertions.assertNotNull(timelineElement);
-        } catch (AssertionFailedError assertionFailedError) {
-            sharedSteps.throwAssertFailerWithIUN(assertionFailedError);
-        }
-
-        webRecipientClient.setBearerToken(baseUser);
-    }
-
-    @And("lato desinatario {string} viene verificato che l'elemento di timeline NOTIFICATION_VIEWED non esista")
-    public void notificationCanBeCorrectlyReadFromBytimelineNotExist(String recipient) {
-        sharedSteps.selectUser(recipient);
-
-        try {
-            it.pagopa.pn.client.web.generated.openapi.clients.externalWebRecipient.model.TimelineElementCategoryV23 timelineElementCategoryV23 =
-                    it.pagopa.pn.client.web.generated.openapi.clients.externalWebRecipient.model.TimelineElementCategoryV23.NOTIFICATION_VIEWED;
-            it.pagopa.pn.client.web.generated.openapi.clients.externalWebRecipient.model.TimelineElementV23 timelineElement = getTimelineElementV23WebRecipient(timelineElementCategoryV23);
-
-            Assertions.assertNull(timelineElement);
-        } catch (AssertionFailedError assertionFailedError) {
-            sharedSteps.throwAssertFailerWithIUN(assertionFailedError);
+            TimelineElementCategoryV28 timelineElementCategory = TimelineElementCategoryV28.valueOf(timelineEventString);
+            TimelineElementV28 timelineElement = getTimelineElementWebRecipient(timelineElementCategory);
+            assertThat(timelineElement).as("Il timeline element non dev'essere null").isNotNull();
+        } catch (IllegalArgumentException e) {
+            throw new RuntimeException("Valore non valido per TimelineElementCategoryV28: " + timelineEventString, e);
+        } catch (AssertionError assertionError) {
+            sharedSteps.throwAssertionErrorWithIUN(assertionError);
         }
         webRecipientClient.setBearerToken(baseUser);
     }
 
-    private it.pagopa.pn.client.web.generated.openapi.clients.externalWebRecipient.model.TimelineElementV23 getTimelineElementV23WebRecipient(it.pagopa.pn.client.web.generated.openapi.clients.externalWebRecipient.model.TimelineElementCategoryV23 timelineElementCategoryV23) {
+    @And("lato destinatario {string} viene verificato che l'elemento di timeline NOTIFICATION_VIEWED non esista")
+    public void notificationCanBeCorrectlyReadFromByTimelineNotExist(String recipient) {
+        // Seleziona l'utente destinatario
+        sharedSteps.selectUser(recipient);
 
-        FullReceivedNotificationV23 result = webRecipientClient.getReceivedNotification(sharedSteps.getSentNotification().getIun(), null);
-        log.info("NOTIFICATION_TIMELINE: " + sharedSteps.getSentNotification().getTimeline());
+        // Definisce la categoria dell'elemento di timeline da verificare
+        TimelineElementCategoryV28 category = TimelineElementCategoryV28.NOTIFICATION_VIEWED;
 
+        // Recupera l'elemento di timeline per il destinatario
+        TimelineElementV28 timelineElement = getTimelineElementWebRecipient(category);
+
+        // Verifica che l'elemento di timeline non esista
+        if (timelineElement != null) {
+            log.error("Elemento di timeline '{}' trovato per il destinatario '{}', ma non avrebbe dovuto esistere. Dettagli: {}",
+                    category, recipient, timelineElement);
+        }
+
+        try {
+            // Asserzione che fallisce se l'elemento di timeline esiste
+            Assertions.assertNull(timelineElement,
+                    String.format("Elemento di timeline '%s' trovato per il destinatario '%s', ma non avrebbe dovuto esistere.",
+                            category, recipient));
+        } catch (AssertionError assertionError) {
+            sharedSteps.throwAssertionErrorWithIUN(assertionError);
+        }
+        // Reimposta il token di autenticazione per il client del destinatario
+        webRecipientClient.setBearerToken(baseUser);
+    }
+
+    private TimelineElementV28 getTimelineElementWebRecipient(TimelineElementCategoryV28 timelineElementCategory) {
+        BundleFullReceivedNotification result = webRecipientClient.getFullReceivedNotification(sharedSteps.getNotificationIun(), null);
+        log.info("NOTIFICATION_TIMELINE: " + result.getTimeline());
         return result
                 .getTimeline()
                 .stream()
-                .filter(elem -> Objects.requireNonNull(elem.getCategory())
-                        .equals(timelineElementCategoryV23))
+                .filter(elem -> Objects.requireNonNull(elem.getCategory().getValue()).equals(timelineElementCategory.getValue()))
                 .findAny()
                 .orElse(null);
     }
 
     @And("la notifica può essere correttamente letta da {string} per comune {string}")
-    public void notificationCanBeCorrectlyReadFromAtPa(String recipient, String pa) {
-        sharedSteps.selectPA(pa);
+    public void notificationCanBeCorrectlyReadFromAtPa(String recipient, String paName) {
+        sharedSteps.setPA(paName);
         sharedSteps.selectUser(recipient);
-        Assertions.assertDoesNotThrow(() -> {
-            webRecipientClient.getReceivedNotification(sharedSteps.getSentNotification().getIun(), null);
-        });
+        Assertions.assertDoesNotThrow(() -> webRecipientClient.getFullReceivedNotification(sharedSteps.getNotificationIun(), null));
     }
+
+    private NotificationSearchResponse notificationSearchResponse;
+
+    @And("{string} visualizza l'elenco delle notifiche per comune {string}")
+    public void notificationCanBeCorrectlyReadFromAtPa(String recipient, String paName, @Transpose RicezioneNotificheWebSteps.NotificationSearchParam searchParam) {
+        sharedSteps.setPA(paName);
+        sharedSteps.selectUser(recipient);
+        NotificationStatusV26 notificationStatus = searchParam.status != null ? NotificationStatusV26.valueOf(searchParam.status) : null;
+        try {
+            this.notificationSearchResponse = webRecipientClient.searchReceivedNotification(searchParam.startDate, searchParam.endDate, searchParam.mandateId /*mandateId = null by default*/,
+                    searchParam.senderId, notificationStatus, searchParam.subjectRegExp,
+                    searchParam.iunMatch, searchParam.size, null);
+        } catch (HttpStatusCodeException e) {
+            this.sharedSteps.setNotificationError(e);
+            this.notificationError = e;
+        }
+    }
+
+    @And("{string} visualizza l'elenco delle notifiche del delegante {string} per comune {string}")
+    public void notificationCanBeCorrectlyReadFromAtPa(String user, String recipient, String paName, @Transpose RicezioneNotificheWebSteps.NotificationSearchParam searchParam) {
+        sharedSteps.setPA(paName);
+        sharedSteps.selectUser(user);
+        NotificationStatusV26 notificationStatus = searchParam.status != null ? NotificationStatusV26.valueOf(searchParam.status) : null;
+        try {
+            this.notificationSearchResponse = webRecipientClient.searchReceivedDelegatedNotification(
+                    searchParam.startDate, searchParam.endDate, getRecipientId(recipient),
+                    null, searchParam.senderId, notificationStatus,
+                    searchParam.iunMatch, searchParam.size, null);
+        } catch (HttpStatusCodeException e) {
+            this.sharedSteps.setNotificationError(e);
+            this.notificationError = e;
+        }
+    }
+
+    //TODO: insert recipientID da selfcare (si possono recuperare dai token)
+    private String getRecipientId(String recipientId) {
+        return switch (recipientId.toLowerCase().trim()) {
+            case "mario cucumber" -> "123";
+            case "mario gherkin" -> "345";
+            case "gherkinsrl" -> "789";
+            case "cucumberspa" -> "1011";
+            default -> throw new IllegalStateException("Unexpected value: " + recipientId);
+        };
+    }
+
+    @And("Si verifica che il numero di notifiche restituite nella pagina sia {int}")
+    public void verifyNumberOfNotification(Integer number) {
+        Assertions.assertEquals(notificationSearchResponse.getResultsPage().size(), number);
+    }
+
 
     @And("si verifica che l'elemento di timeline della lettura riporti i dati di {string}")
     public void siVerificaCheLElementoDiTimelineDellaLetturaRiportiIDatiDi(String user) {
-        TimelineElementV23 timelineElement = getTimelineElementV23();
+        it.pagopa.pn.client.b2b.pa.generated.openapi.clients.externalb2bpa.model.TimelineElementV28 timelineElement = getTimelineElement();
 
         String userTaxId = getTaxIdByUser(user);
-        System.out.println("TIMELINE ELEMENT: " + timelineElement);
-        Assertions.assertNotNull(timelineElement);
+        log.info("TIMELINE ELEMENT : {}", timelineElement);
+        assertThat(timelineElement).as("Il timeline element non dev'essere null").isNotNull();
         Assertions.assertNotNull(timelineElement.getDetails());
         Assertions.assertNotNull(timelineElement.getDetails().getDelegateInfo());
         Assertions.assertEquals(userTaxId, timelineElement.getDetails().getDelegateInfo().getTaxId());
@@ -511,45 +633,148 @@ public class RicezioneNotificheWebDelegheSteps {
 
     @And("si verifica che l'elemento di timeline della lettura non riporti i dati del delegato")
     public void siVerificaCheLElementoDiTimelineDellaLetturaNonRiportiIDatiDi() {
-        TimelineElementV23 timelineElement = getTimelineElementV23();
+        it.pagopa.pn.client.b2b.pa.generated.openapi.clients.externalb2bpa.model.TimelineElementV28 timelineElement = getTimelineElement();
 
-        System.out.println("TIMELINE ELEMENT: " + timelineElement);
-        Assertions.assertNotNull(timelineElement);
+        log.info("TIMELINE ELEMENT : {}", timelineElement);
+        assertThat(timelineElement).as("Il timeline element non dev'essere null").isNotNull();
         Assertions.assertNotNull(timelineElement.getDetails());
         Assertions.assertNull(timelineElement.getDetails().getDelegateInfo());
     }
 
-    private TimelineElementV23 getTimelineElementV23() {
+    private it.pagopa.pn.client.b2b.pa.generated.openapi.clients.externalb2bpa.model.TimelineElementV28 getTimelineElement() {
         try {
             await().atMost(sharedSteps.getWorkFlowWait() * 2, TimeUnit.MILLISECONDS);
         } catch (RuntimeException exception) {
             exception.printStackTrace();
         }
-        sharedSteps.setSentNotification(sharedSteps.getB2bClient().getSentNotification(sharedSteps.getSentNotification().getIun()));
-
-        return sharedSteps
-                .getSentNotification()
+        FullSentNotificationV28 fullSentNotification = sharedSteps.getSentNotificationLastVersion();
+        return fullSentNotification
                 .getTimeline()
                 .stream()
-                .filter(elem -> Objects.requireNonNull(elem.getCategory())
-                        .equals(TimelineElementCategoryV23.NOTIFICATION_VIEWED))
+                .filter(elem ->
+                        Objects.requireNonNull(elem.getCategory()).getValue().equals(NOTIFICATION_VIEWED))
                 .findAny()
                 .orElse(null);
     }
 
-    //for debug
+    @Then("il delegato {string} visualizza le deleghe a suo carico")
+    public void delegateViewsAssignedMandates(String user) {
+        delegateViewMandate(user, null);
+    }
+
+    @Then("il delegato {string} visualizza le deleghe a suo carico con stato {string}")
+    public void delegateViewsAssignedMandatesWithStatus(String user, String status) {
+        try {
+            delegateViewMandate(user, status);
+        } catch (HttpStatusCodeException e) {
+            this.notificationError = e;
+        }
+    }
+
+    private void delegateViewMandate(String user, String statusFilter) {
+        setBearerToken(user);
+        try {
+            List<MandateDto> mandateList = webMandateClient.listMandatesByDelegate1(statusFilter);
+            Assertions.assertNotNull(mandateList, "La lista mandateList è null");
+            Assertions.assertFalse(mandateList.isEmpty(), "La lista mandateList è vuota");
+        } catch (HttpStatusCodeException e) {
+            this.notificationError = e;
+        }
+    }
+
+
+    @Then("il delegato {string} visualizza le deleghe da parte di un delegante con CF: {string}")
+    public void delegateViewsAssignedMandates(String user, String fiscalCode) {
+        setBearerToken(user);
+        try {
+            List<MandateDto> mandateList = webMandateClient.searchMandatesByDelegate(fiscalCode, null);
+            Assertions.assertNotNull(mandateList, "La lista mandateList è null");
+            Assertions.assertFalse(mandateList.isEmpty(), "La lista mandateList è vuota");
+        } catch (HttpStatusCodeException e) {
+            this.notificationError = e;
+        }
+    }
+
+    @Then("il delegato {string} visualizza le deleghe da parte di {string} in stato {string}")
+    public void delegateViewsAssignedMandatesWithStatus(String delegate, String delegator, String status) {
+        setBearerToken(delegate);
+        try {
+            List<MandateDto> mandateList;
+            if (status.trim().equals("")) {
+                mandateList = webMandateClient.searchMandatesByDelegate(getTaxIdByUser(delegator), null);
+            } else if (delegator.trim().equals("")) {
+                mandateList = webMandateClient.searchMandatesByDelegateStatusFilter("", List.of(status), null);
+            } else {
+                mandateList = webMandateClient.searchMandatesByDelegateStatusFilter(getTaxIdByUser(delegator), List.of(status), null);
+            }
+            Assertions.assertNotNull(mandateList, "La lista mandateList è null");
+            Assertions.assertFalse(mandateList.isEmpty(), "La lista mandateList è vuota");
+        } catch (HttpStatusCodeException e) {
+            this.notificationError = e;
+        }
+    }
+
+
     @And("{string} visualizza le deleghe")
     public void visualizzaLeDeleghe(String user) {
-        if (setBearerToken(user)) {
-            throw new IllegalArgumentException();
-        }
+        setBearerToken(user);
 
         List<MandateDto> mandateList = webMandateClient.listMandatesByDelegate1(null);
-        List<MandateDto> mandateDtos = webMandateClient.listMandatesByDelegator1();
+        List<MandateDto> mandateDtos = Assertions.assertDoesNotThrow(() -> webMandateClient.listMandatesByDelegator1());
 
         System.out.println("TOKEN SETTED (user: +" + user + ") : " + webMandateClient.getBearerTokenSetted());
         System.out.println("MANDATE-LIST (user: +" + user + ") : " + mandateList);
         System.out.println("TOKEN SETTED (user: +" + user + ") : " + webMandateClient.getBearerTokenSetted());
         System.out.println("MANDATE-LIST-DELEGATOR (user: +" + user + ") : " + mandateDtos);
+    }
+
+    @And("viene creata una delega con i seguenti parametri errati:")
+    public void createMandateWithNotValidDate(Map<String, String> data) {
+        setBearerToken(data.get("delegator"));
+        SimpleDateFormat sdf = new SimpleDateFormat("yyyy-MM-dd");
+        MandateDto mandate = new MandateDto()
+                .delegator(getUserDtoByUser(data.get("delegator")))
+                .delegate(Optional.ofNullable(data.get("delegate")).map(this::getInvalidUserDto).orElse(getUserDtoByUser("mario gherkin")))
+                .verificationCode(verificationCode)
+                .datefrom(data.getOrDefault("dateFrom", sdf.format(new Date())))
+                .visibilityIds(new LinkedList<>())
+                .status(MandateDto.StatusEnum.PENDING)
+                .dateto(data.getOrDefault("dateTo", sdf.format(DateUtils.addDays(new Date(), 1))));
+
+        System.out.println("MANDATE: " + mandate);
+        try {
+            webMandateClient.createMandate(mandate);
+        } catch (HttpStatusCodeException e) {
+            this.notificationError = e;
+        }
+    }
+
+    private UserDto getInvalidUserDto(String delegator) {
+        return switch (delegator) {
+            case "EMPTY_FISCAL_CODE" -> createUserDto("Mario Cucumber", "Mario", "Cucumber", null, null, true);
+            case "INVALID_FISCAL_CODE" ->
+                    createUserDto("Mario Cucumber", "Mario", "Cucumber", "AAA8090ZAC", null, true);
+            case "EMPTY_FIRST_NAME" ->
+                    createUserDto("Mario Cucumber", null, "Cucumber", "CLMCST42R12D969Z", null, true);
+            case "EMPTY_LAST_NAME" -> createUserDto("Mario Cucumber", "Mario", null, "CLMCST42R12D969Z", null, true);
+            case "FIRST_NAME_NOT_VALID" ->
+                    createUserDto("Cristoforo Colombo", "PippoPippoPippoPippoPippoPippoPippoPippoPippoPippoPippoPippoPippoPippoPippoPippoPippo", "Colombo", "FRMTTR76M06B715E", null, true);
+            case "LAST_NAME_NOT_VALID" ->
+                    createUserDto("Cristoforo Colombo", "Cristoforo", "PippoPippoPippoPippoPippoPippoPippoPippoPippoPippoPippoPippoPippoPippoPippoPippoPippo", "FRMTTR76M06B715E", null, true);
+            case "EMPTY_DISPLAY_NAME" -> createUserDto(null, "Mario", "Cucumber", "CLMCST42R12D969Z", null, true);
+            case "DISPLAY_NAME_NOT_VALID" ->
+                    createUserDto("PippoPippoPippoPippoPippoPippoPippoPippoPippoPippoPippoPippoPippoPippoPippoPippoPippo", "Mario", "Cucumber", "CLMCST42R12D969Z", null, true);
+            default -> throw new IllegalStateException("Unexpected value: " + delegator);
+        };
+    }
+
+    private UserDto createUserDto(String displayName, String firstName, String lastName, String fiscalCode, String companyName, boolean isPerson) {
+        return new UserDto()
+                .displayName(displayName)
+                .firstName(firstName)
+                .lastName(lastName)
+                .fiscalCode(fiscalCode)
+                .companyName(companyName)
+                .person(isPerson);
     }
 }
